--- a/prepros-6.config
+++ b/prepros-6.config
@@ -307,40 +307,30 @@
     {
       "path": "src/sass/style.scss",
       "imports": [
-        "dist/assets/fonts/fontawesome/scss/fontawesome.scss",
         "src/sass/lib/_variables.scss",
         "src/sass/lib/_mixins.scss",
         "src/sass/lib/_functions.scss",
         "src/sass/layout/_bootstrap_reboot.scss",
         "src/sass/layout/_site.scss",
+        "src/sass/layout/_grid.scss",
+        "src/sass/base/_typography.scss",
+        "src/sass/base/_icons.scss",
         "src/sass/base/_links.scss",
         "src/sass/base/_buttons.scss",
-        "src/sass/base/_typography.scss",
-        "src/sass/base/_tables.scss",
         "src/sass/components/_header.scss",
         "src/sass/components/_hero.scss",
         "src/sass/components/_carousel.scss",
         "src/sass/components/_categories.scss",
+        "src/sass/components/_problem_story.scss",
         "src/sass/components/_text.scss",
         "src/sass/components/_us.scss",
+        "src/sass/components/_pack.scss",
         "src/sass/components/_faq.scss",
         "src/sass/components/_modus.scss",
         "src/sass/components/_contact.scss",
         "src/sass/components/_project.scss",
         "src/sass/components/_footer.scss",
-        "src/sass/components/_media.scss",
-        "dist/assets/fonts/fontawesome/scss/_variables.scss",
-        "dist/assets/fonts/fontawesome/scss/_mixins.scss",
-        "dist/assets/fonts/fontawesome/scss/_core.scss",
-        "dist/assets/fonts/fontawesome/scss/_larger.scss",
-        "dist/assets/fonts/fontawesome/scss/_fixed-width.scss",
-        "dist/assets/fonts/fontawesome/scss/_list.scss",
-        "dist/assets/fonts/fontawesome/scss/_bordered-pulled.scss",
-        "dist/assets/fonts/fontawesome/scss/_animated.scss",
-        "dist/assets/fonts/fontawesome/scss/_rotated-flipped.scss",
-        "dist/assets/fonts/fontawesome/scss/_stacked.scss",
-        "dist/assets/fonts/fontawesome/scss/_icons.scss",
-        "dist/assets/fonts/fontawesome/scss/_screen-reader.scss"
+        "src/sass/components/_media.scss"
       ]
     },
     {
@@ -350,7 +340,8 @@
         "src/pug/lib/mixins.pug",
         "src/pug/base/head.pug",
         "src/pug/base/header.pug",
-        "src/pug/components/categories.pug",
+        "src/pug/components/index/_hero.pug",
+        "src/pug/components/index/categories.pug",
         "src/pug/components/_faq.pug",
         "src/pug/components/contact_1.pug",
         "src/pug/components/contact_2.pug",
@@ -375,6 +366,10 @@
         "src/pug/lib/mixins.pug",
         "src/pug/base/head.pug",
         "src/pug/base/header.pug",
+        "src/pug/components/identidad_corporativa/_hero.pug",
+        "src/pug/components/identidad_corporativa/_explain.pug",
+        "src/pug/components/identidad_corporativa/_packege.pug",
+        "src/pug/components/identidad_corporativa/_boxpills.pug",
         "src/pug/components/contact_2.pug",
         "src/pug/base/footer.pug"
       ]
