Arrglos del desastre de code, muchas mejoras

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -319,7 +319,6 @@
         "src/sass/base/_buttons.scss",
         "src/sass/components/_header.scss",
         "src/sass/components/_hero.scss",
-        "src/sass/components/_carousel.scss",
         "src/sass/components/_categories.scss",
         "src/sass/components/_problem_story.scss",
         "src/sass/components/_text.scss",
@@ -398,7 +397,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
